--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 		></script>
 	</head>
 	<body>
-		<p>Lorem ipsum dolor sit amet.</p>
+		
 
-		<!-- <a href="">Google.pl</a> -->
-		<!-- <p class="small">to jest mały tekst</p>
-		<p class="big">TO JEST DUŻY TEKST</p>
-		<p class="text">to jest trzeci tekst</p> -->
+		<div>
+			
+		</div>
 	</body>
 </html>
