--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>MMC School</title>
+		<title>Document</title>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="style.css" />
 
 		<script
 			src="https://kit.fontawesome.com/3d50f22a88.js"
@@ -20,10 +19,30 @@
 		></script>
 	</head>
 	<body>
-		
+		<i class="fa-brands fa-apple"></i>
+		<i class="fa-brands fa-google"></i>
+		<i class="fa-brands fa-windows"></i>
+		<div>
+
+			<img src="https://cdn.pixabay.com/photo/2023/04/11/13/27/bird-7917250_1280.jpg" alt="kaczka płynąca w wodzie" class="center-image">
+			<link rel="stylesheet" href="style.css">
+
+		</div>
 
 		<div>
-			
+<p><strong><span>Lorem</span> ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, necessitatibus?</strong></p>
+
+
+
 		</div>
+
+		<ol>
+			<li>Pierogi</li>
+			<li>Barszcz</li>
+			<li>Schabowy</li>
+			<li>Żurek</li>
+			<li>Krokiety</li>
+		</ol>
+
 	</body>
 </html>
