--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 		/>
 	</head>
 	<body>
-		<div class="box-1">
-			<div class="circle"></div>
+		<div>
+			<p>P W DIV</p>
+			<section>
+				<p>Tekst w SECTION</p>
+			</section>
+			<p>Drugie P w DIV</p>
 		</div>
-	
 
-		<div class="box-2"></div>
+		<hr />
 
-		<div class="box-3">
-			<div class="inside"></div>
-		</div>
-		
-
+		<p>P poza DIV</p>
+		<p>Drugie P poza DIV</p>
+		<p>Trzecie P poza DIV</p>
 	</body>
 </html>
