--- a/index.html
+++ b/index.html
@@ -5,27 +5,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 
-		<link rel="stylesheet" href="style.css" />
+		
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div>
-			<p>P W DIV</p>
-			<section>
-				<p>Tekst w SECTION</p>
-			</section>
-			<p>Drugie P w DIV</p>
-		</div>
+		<main>
+			<div>
+				<p>123</p>
+				<p>123</p>
+				<p>123</p>
+			</div>
+			<div class="child">
+				<p>abcd</p>
+				<p>abcd</p>
+			</div>
+			<div>
+				<div id="test"></div>
+				<div>test</div>
+				<div>test</div>
+			</div>
+		</main>
 
-		<hr />
-
-		<p>P poza DIV</p>
-		<p>Drugie P poza DIV</p>
-		<p>Trzecie P poza DIV</p>
+		<p>Tekst poza DIVami</p>
+		<p>Tekst poza DIVami</p>
 	</body>
 </html>
