--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 
-		
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -15,24 +14,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<main>
-			<div>
-				<p>123</p>
-				<p>123</p>
-				<p>123</p>
-			</div>
-			<div class="child">
-				<p>abcd</p>
-				<p>abcd</p>
-			</div>
-			<div>
-				<div id="test"></div>
-				<div>test</div>
-				<div>test</div>
-			</div>
-		</main>
-
-		<p>Tekst poza DIVami</p>
-		<p>Tekst poza DIVami</p>
+		<div class="square content">Content box</div>
+		<div class="square border">Border box</div>
 	</body>
 </html>
