--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="square content">Content box</div>
+	
+		<div class="square"></div>
 
 	</body>
 </html>
