--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	</head>
 	<body>
 	
-		<div class="square"></div>
+		<a href="sadfy">Na ten link nie wchodziliśmy</a>
+		<br>
+		<a href="">Kliknięty link</a>
 
 	</body>
 </html>
