--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 	</head>
 	<body>
 	
-		<a href="sadfy">Na ten link nie wchodziliśmy</a>
-		<br>
-		<a href="">Kliknięty link</a>
+	<button> Jestem zwykłym przyciskiem ...</button>
+	<button class="btn">Jestem ostylowanym przyciskiem!</button>
 
 	</body>
 </html>
