--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 	</head>
 	<body>
 	
-	<button> Jestem zwykłym przyciskiem ...</button>
-	<button class="btn">Jestem ostylowanym przyciskiem!</button>
+		<main>
+			<div class="red"></div>
+			<div class="blue"></div>
+			<div class="green"></div>
+		</main>
 
 	</body>
 </html>
