--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-	
 		<main>
 			<div class="red"></div>
-			<div class="blue"></div>
+			<div class="blue"><div class="gold"></div></div>
 			<div class="green"></div>
 		</main>
-
 	</body>
 </html>
