--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="style.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
+		
+		<link rel="stylesheet" href="style.css"
+		
 	</head>
 
 	<body>
-		<div class="square blue"></div>
-		<div class="square green"></div>
-		<div class="square red"></div>
-		<div class="square gold"></div>
-		<div class="bg"></div>
+
+
+
+		<button class="btn-zoom">ZOOM</button>
+		<button class="btn-move">MOVE</button>
+		<button class="btn-color">COLOR</button>
+
+		<div class=" square blue"></div>
+		<div class=" square red"></div>
+		<div class=" square green"></div>
+
+
+
 	</body>
 </html>
