--- a/index.html
+++ b/index.html
@@ -17,17 +17,10 @@
 
 	<body>
 
-
-
-		<button class="btn-zoom">ZOOM</button>
-		<button class="btn-move">MOVE</button>
-		<button class="btn-color">COLOR</button>
-
-		<div class=" square blue"></div>
-		<div class=" square red"></div>
-		<div class=" square green"></div>
-
-
+<div class="square translate"></div>
+<div class="square scale"></div>
+<div class="square rotate">rotate</div>
+<div class="square skew"></div>
 
 	</body>
 </html>
