--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	</head>
 
 	<body>
+		
 
-<div class="square translate"></div>
-<div class="square scale"></div>
-<div class="square rotate">rotate</div>
-<div class="square skew"></div>
+<div class="square"></div>
+<div class="square2"></div>
+<div class="dot"></div>
+
 
 	</body>
 </html>
