--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
 
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+			rel="stylesheet"
+		/>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-
-		
 		<link rel="stylesheet" href="style.css"
-		
 	</head>
 
 	<body>
+
+
+
+		<div class="square"></div>
+
+
 		
-
-<div class="square"></div>
-<div class="square2"></div>
-<div class="dot"></div>
-
-
 	</body>
 </html>
