--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
 
 
-		<div class="square"></div>
+	<div class="long">DIV z klasą "log"</div>
+	<div class="short">DIV z klasą "short"</div>
+	<div class="short2">Short 2</div>
+	<div class="short3">Short 3</div>
+	<div class="center">Wyśrodkowany za pomocą transform</div>
 
 
-		
 	</body>
 </html>
