--- a/index.html
+++ b/index.html
@@ -17,14 +17,7 @@
 
 	<body>
 
-
-
-	<div class="long">DIV z klasą "log"</div>
-	<div class="short">DIV z klasą "short"</div>
-	<div class="short-size short-size short2">Short 2</div>
-	<div class="short-size short-size short3">Short 3</div>
-	<div class="short-size short-size center">Wyśrodkowany za pomocą transform</div>
-
-
+		<div class="square"></div>
 	</body>
+	
 </html>
