--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
 			rel="stylesheet"
 		/>
-
-		<link rel="stylesheet" href="style.css"
+		<link rel="stylesheet" href="./main.css" />
 	</head>
+	<body> 
 
-	<body>
+        <header></header>
+        <nav class="nav">
 
-		<div class="square"></div>
-	</body>
-	
+            <ul>
+                <li class="nav-item"><a href="#">home</a></li>
+                <li class="nav-item"><a href="#">usługi</a></li>
+                <li class="nav-item"><a href="#">cennik</a></li>
+                <li class="nav-item"><a href="#">kontakt</a></li>
+            </ul>
+            </nav>
+        <main>
+            <a href="">TO JEST LINK</a>
+        </main>
+        <footer></footer>
+
+    </body>
 </html>
